[gd_scene load_steps=5 format=3 uid="uid://yvcimy1h3e3f"]

[ext_resource type="Texture2D" uid="uid://d03xc0syepqqw" path="res://textures/pixel_cyberpunk_interior_free_1.0.1/CyberDoor.png" id="1_gxl1s"]
[ext_resource type="Script" uid="uid://d2fbwpa0ox4on" path="res://scripts/Hub/cyber_door.gd" id="1_n63if"]
[ext_resource type="FontFile" uid="uid://hke21ckgccrf" path="res://textures/Fonts/superstar-memesbruh03/superstar_memesbruh03.ttf" id="2_n63if"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v5qnv"]
size = Vector2(16.3333, 20)

[node name="CyberDoor" type="Area2D"]
script = ExtResource("1_n63if")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.500001, 7)
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_v5qnv")
one_way_collision_margin = 0.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_gxl1s")

[node name="Label" type="Label" parent="."]
z_index = 5
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -22.0
offset_right = 15.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(47.5, 10.5)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_n63if")
text = "Text"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
